--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>协同文档编辑器</title>
+    <title>协同文档编辑器、在线文档、在线表格、在线脑图</title>
   </head>
   <body>
     <div id="app"></div>
